# UNIVERSITY-MANAGEMENT-SYSTEM

./: .gitignore  CMakeLists.txt  EXAM_FEATURE_GUIDE.md  LICENSE.md  Makefile  QT_GUI_IMPLEMENTATION.md  README.md  REGISTRATION_VERIFICATION.md  test_features.sh  university_system
.github/workflows/: build.yml
Academic/: AcademicAdmin.cpp  AcademicAdmin.h
Administration/: Administration.cpp  Administration.h
Department/: Department.cpp  Department.h
Exam/: Exam.cpp  Exam.h  ExamSchedule.cpp  ExamSchedule.h  ExamSection.cpp  ExamSection.h
Faculty/: Faculty.cpp  Faculty.h
Main/: GenericListDialog.cpp  GenericListDialog.h  MainWindow.cpp  MainWindow.h  StudentRegistrationDialog.cpp  StudentRegistrationDialog.h  StudentSearchDialog.cpp  StudentSearchDialog.h  main.cpp  moc_GenericListDialog.cpp  moc_MainWindow.cpp  moc_StudentRegistrationDialog.cpp  moc_StudentSearchDialog.cpp
Person/: Person.cpp  Person.h
Residence/: Residence.cpp  Residence.h
Sports/: Sports.cpp  Sports.h  SportsAffiliation.cpp  SportsAffiliation.h
Student/: Student.cpp  Student.h
